FlashBugfix機能実装
